Fix problems with icon spacing on render

--- a/app-react/src/components/Navbar/Navbar.sass
+++ b/app-react/src/components/Navbar/Navbar.sass
@@ -4,7 +4,7 @@
   border-top: 1px solid #b8cfc6
 
   .navbar-option
-    margin: 12px
+    margin: 6px 14px 6px 8px
     padding: 10px
     width: 25px
     height: 25px
